--- a/blog/blog.css
+++ b/blog/blog.css
@@ -87,8 +87,8 @@
         flex: 1;
         display: flex;
         flex-direction: column;
-        align-items: center; 
-        text-align: center;  
+        align-items: flex-start; 
+        text-align: left;  
     }
 
     .mainBook h3,
