--- a/personal-site/style.css
+++ b/personal-site/style.css
@@ -3,9 +3,9 @@
 
 /* Root variables from site-plan */
 :root {
-  --primary-color: #3BA9C0;
+  --primary-color: #2A7A8C;
   --secondary-color: #D2BE95;
-  --accent1-color: #D37059;
+  --accent1-color: #B84C3A;
   --accent2-color: white;
 
   --heading-font: "Poppins", sans-serif;
